<resources>
    <string name="app_name">Spinner</string>
    <string name="top">Agregar nuevo elemento</string>
    <string name="top_et">Ingrese nombre nuevo elemento</string>
    <string name="top_btn">Guardar</string>
    <string name="mid">Digitar el spinner:</string>
    <string name="sp_name">Opciones</string>
    <string name="sp_name2">Manzana</string>
    <string-array name="sp_test">
        <item>Opcion 1</item>
        <item>Opcion 2</item>
        <item>Opcion 3</item>
        <item>Opcion 4</item>
        <item>Opcion 5</item>
        <item>Opcion 6</item>
        <item>Opcion 7</item>
        <item>Opcion 8</item>
        <item>Opcion 9</item>
        <item>Opcion 10</item>
    </string-array>
</resources>
